# student-academic-warning-system

./: .env.example  .gitignore  CLAUDE.md  Makefile  README.md  ROADMAP.md  docker-compose.yml  feature_list.md  implementation_plan.md  pyproject.toml
backend/: Dockerfile  alembic.ini  requirements.txt
backend/app/: main.py
backend/app/core/: config.py  deps.py  scheduler.py  security.py
backend/app/db/: init_db.py  session.py
backend/app/models/: __init__.py  chat_message.py  course.py  document.py  enrollment.py  event.py  notification.py  prediction.py  student.py  user.py  warning.py
backend/app/schemas/: admin.py  chatbot.py  course.py  document.py  enrollment.py  event.py  notification.py  prediction.py  student.py  study_plan.py  user.py  warning.py
backend/app/services/: email_service.py  event_manager.py  gpa_calculator.py  grade_aggregator.py  import_service.py  mybk_parser.py  notification.py  recommender.py  study_plan.py  warning_engine.py
backend/data/models/: feature_names.json  metrics_v1.json
backend/migrations/: README  env.py  script.py.mako
backend/migrations/versions/: 331730d3032d_add_m3_enrollment_fields.py  7f4a8b1c2d3e_add_m6_warnings_email_fields.py  9a5d2e7c4b19_add_m5_rag_chatbot.py  e55f5d666040_initial_schema.py
backend/scripts/: cleanup_synthetic.py  generate_m6_extra_cases.py  init.sql  seed_m6_demo.py  seed_m6_test_users.py  seed_regulations.py  seed_synthetic.py  sync_synthetic_stats.py  verify_predictions.py
backend/tests/: test_gpa_calculator.py  test_parser.py  test_pdf_gen.py  test_prediction_features.py  test_rag.py  test_warning_engine.py
backend/tests/test-data/: mybk-high-risk-many-f.txt
docs/: ARCHITECTURE.md  DATABASE_SCHEMA.md  SLIDES.md  SLIDES.md.bak  _render_mermaid.py
docs/hcmut_rag_pack/: README_RAG.md
docs/hcmut_rag_pack/links/: hcmut_chuong_trinh_dao_tao.url  hcmut_quy_che_quy_dinh.url  hcmut_so_tay_sinh_vien_2025_2026.url  mybk_and_hcmut_sources.md  mybk_bang_tong_hop_quy_dinh_cac_chuan.url  mybk_cau_hoi_tot_nghiep.url  mybk_cntt_co_ban.url  mybk_dang_ky_mon_hoc_huong_dan_chung.url  mybk_dang_ky_thong_tin_van_bang.url  mybk_danh_gia_ket_qua_hoc_tap.url  mybk_dao_tao_song_nganh.url  mybk_hoan_thi.url  mybk_hoc_phi.url  mybk_keo_dai_thoi_gian_dao_tao.url  mybk_lich_trinh_cap_nhat_chuan_2025_2026.url  (+3 more)
docs/test-data/: mybk-full-251-to-221.txt  mybk-low-risk-no-f.txt  mybk-medium-recovered-one-f.txt
frontend/: Dockerfile  middleware.ts  package-lock.json  package.json  tailwind.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: LanguageToggle.tsx  onboarding-tour.tsx
frontend/lib/: api.ts  auth.ts  i18n.ts
(+87 files in other folders)
