[tool.poetry]
name = "warning-ai-backend"
version = "0.1.0"
description = "AI Student Warning System – Backend (FastAPI)"
authors = ["HCMUT Dev Team"]
readme = "backend/README.md"
packages = [{include = "app", from = "backend"}]

[tool.poetry.dependencies]
python = "^3.11"

# ─── Web Framework ───────────────────────────────────────────
fastapi = "^0.111.0"
uvicorn = {extras = ["standard"], version = "^0.29.0"}
pydantic = "^2.7.0"
pydantic-settings = "^2.2.0"

# ─── Database ────────────────────────────────────────────────
sqlalchemy = {extras = ["asyncio"], version = "^2.0.29"}
asyncpg = "^0.29.0"
alembic = "^1.13.1"
pgvector = "^0.2.5"

# ─── Auth ────────────────────────────────────────────────────
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-multipart = "^0.0.9"

# ─── Task Queue ──────────────────────────────────────────────
celery = {extras = ["redis"], version = "^5.3.6"}
redis = "^5.0.4"

# ─── AI / ML ─────────────────────────────────────────────────
scikit-learn = "^1.4.2"
xgboost = "^2.0.3"
pandas = "^2.2.2"
numpy = "^1.26.4"
joblib = "^1.4.0"

# ─── RAG / LLM ───────────────────────────────────────────────
openai = "^1.25.0"
llama-index = "^0.10.37"
llama-index-vector-stores-postgres = "^0.1.7"
pypdf = "^4.2.0"
tiktoken = "^0.7.0"

# ─── HTTP Client ─────────────────────────────────────────────
httpx = "^0.27.0"

# ─── Utilities ───────────────────────────────────────────────
python-dotenv = "^1.0.1"
loguru = "^0.7.2"
openpyxl = "^3.1.2"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"
pytest-asyncio = "^0.23.6"
pytest-cov = "^5.0.0"
httpx = "^0.27.0"
ruff = "^0.4.4"
mypy = "^1.10.0"
pre-commit = "^3.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

# ─── Ruff (Linter + Formatter) ───────────────────────────────
[tool.ruff]
target-version = "py311"
line-length = 100
select = ["E", "W", "F", "I", "B", "C4", "UP"]
ignore = ["E501", "B008", "C901"]
exclude = ["migrations", ".venv", "__pycache__"]

[tool.ruff.isort]
known-first-party = ["app"]

# ─── MyPy ────────────────────────────────────────────────────
[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true
exclude = ["migrations/"]

# ─── Pytest ──────────────────────────────────────────────────
[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["backend/tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --cov=app --cov-report=term-missing"
